tests/baselines/reference/pathsValidation5.errors.txt
tests/cases/compiler/tsconfig.json(5,26): error TS5089: Non-relative paths are not allowed when 'baseUrl' is not set. Did you forget a leading './'?
tests/cases/compiler/tsconfig.json(6,19): error TS5089: Non-relative paths are not allowed when 'baseUrl' is not set. Did you forget a leading './'?


==== tests/cases/compiler/tsconfig.json (2 errors) ====
    {
      "compilerOptions": {
          "traceResolution": true,
          "paths": {
            "@interface/*": ["src/interface/*"],
                             ~~~~~~~~~~~~~~~~~
!!! error TS5089: Non-relative paths are not allowed when 'baseUrl' is not set. Did you forget a leading './'?
            "@blah": ["blah"],
                      ~~~~~~
!!! error TS5089: Non-relative paths are not allowed when 'baseUrl' is not set. Did you forget a leading './'?
            "@humbug/*": ["*/generated"]
          }
      }
    }
    
==== tests/cases/compiler/src/main.ts (0 errors) ====
    import 'someModule';